--- a/src/db/app.json
+++ b/src/db/app.json
@@ -207,7 +207,7 @@
     "events": [
       {
         "id": 1,
-        "date": "2021-01-01",
+        "date": "2022-01-04",
         "hour": "12:30",
         "table": 1,
         "repeat": false,
@@ -217,7 +217,7 @@
       },
       {
         "id": 2,
-        "date": "2021-01-01",
+        "date": "2022-01-01",
         "hour": "16:00",
         "table": 3,
         "repeat": "daily",
@@ -227,7 +227,7 @@
       },
       {
         "id": 3,
-        "date": "2021-01-01",
+        "date": "2022-01-01",
         "hour": "12:00",
         "table": 3,
         "repeat": "daily",
@@ -237,7 +237,7 @@
       },
       {
         "id": 4,
-        "date": "2021-01-01",
+        "date": "2022-01-01",
         "hour": "13:00",
         "table": 2,
         "repeat": "daily",
@@ -247,7 +247,7 @@
       },
       {
         "id": 5,
-        "date": "2021-01-01",
+        "date": "2022-01-01",
         "hour": "18:00",
         "table": 2,
         "repeat": "daily",
@@ -256,7 +256,18 @@
         "starters": ["lemonWater"]
       }
     ],
-    "bookings": []
+    "bookings": [
+       {
+         "id": 1,
+         "date": "2022-01-04",
+         "hour": "16:00",
+         "table": 1,
+         "repeat": "daily",
+         "duration": 2,
+         "ppl": 3,
+         "starters": ["bread", "lemonWater"]
+      }
+    ]
  }
  
  
