--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "dependencies": {
+        "json-server": "^0.17.0"
+    },
     "devDependencies": {
         "autoprefixer": "^10.2.4",
         "browser-sync": "^2.26.3",
@@ -36,7 +39,6 @@
         "eslint": "^5.14.1",
         "globstar": "^1.0.0",
         "html-validate": "^2.8.0",
-        "json-server": "^0.17.0",
         "mkdirp": "^0.5.1",
         "node-sass": "^6.0.1",
         "npm-run-all": "^4.1.5",
